# FileTagManager

./: .gitignore  CMakeLists.txt  LICENSE  config.json  main.cpp
include/: App.h  AppDB.h  AppElementsCommon.h  AppEvents.h  AppGlobals.h  AppState.h  Arr.h  BaseElements.h  CommonObjects.h  Debug.h  DynamicMap.h  ElementGroups.h  Elements.h  EventManager.h  FileExtensions.h  Filesystem.h  Geometry.h  Layout.h  Logger.h  SDL_Helpers.h  SQLiteClass.h  Setter.h  Str.h  SurfaceEditor.h  WindowsUtils.h  app.h  config.h  custom_math.h  custom_types.h  date.h  db_structure.h  geometry.h  logger.h  math.h  type_helpers.h  vect.h
include/BaseElements/: Renderable.h  UIBox.h  UIDynamicElement.h  UIElement.h  UIPictureElement.h  UIText.h
include/ContextMenus/: ContextMenu.h  FileContextMenu.h
include/ElementGroups/: BaseContextMenu.h  ElementGroup.h  FileElement.h  FileExplorer.h  FilesGroup.h  HeaderBar.h  InputBox.h  MainContents.h  MainParent.h  Sidebar.h  TagElement.h  TagList.h  UIButton.h
include/Elements/: ElementGroups.h  Elements.h  FilterElement.h  UICircle.h  UIDivider.h  UIFileElement.h
include/Elements/BaseElements/: Drawable.h  Dynamic.h  UIBox.h  UIDynamicElement.h  UIElement.h  UIPictureElement.h  UIText.h
src/: App.cpp  AppDB.cpp  Arr.cpp  BaseElements.cpp  ElementGroups.cpp  Elements.cpp  Filesystem.cpp  Layout.cpp  SDL_Helpers.cpp  SQLiteClass.cpp  Setter.cpp  Str.cpp  SurfaceEditor.cpp  WindowsUtils.cpp  app.cpp  config.cpp  date.cpp  geometry.cpp  logger.cpp  str.cpp  type_helpers.cpp
src/BaseElements/: UIBox.cpp  UIDynamicElement.cpp  UIElement.cpp  UIPictureElement.cpp  UIText.cpp
src/ContextMenus/: ContextMenu.cpp  FileContextMenu.cpp
src/ElementGroups/: BaseContextMenu.cpp  ElementGroup.cpp  FileElement.cpp  FileExplorer.cpp  FilesGroup.cpp  HeaderBar.cpp  InputBox.cpp  MainContents.cpp  MainParent.cpp  Sidebar.cpp  TagElement.cpp  TagList.cpp  UIButton.cpp
src/Elements/: ElementGroups.cpp  Elements.cpp  FilterElement.cpp  UICircle.cpp  UIDivider.cpp  UIFileElement.cpp
src/Elements/BaseElements/: UIBox.cpp  UIDynamicElement.cpp  UIElement.cpp  UIPictureElement.cpp  UIText.cpp
